--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
     "devDependencies": {
         "mbt": "^1.2.18",
         "rimraf": "^3.0.2"
+    },
+    "dependencies": {
+        "express": "^4.18.2",
+        "http-proxy-middleware": "^2.0.6"
     }
 }
