--- a/ui/webapp/manifest.json
+++ b/ui/webapp/manifest.json
@@ -17,7 +17,7 @@
     },
     "dataSources": {
       "mainService": {
-        "uri": "/odata/",
+        "uri": "/odata",
         "type": "OData",
         "settings": {
           "annotations": [],
@@ -72,7 +72,9 @@
       "": {
         "dataSource": "mainService",
         "preload": true,
-        "settings": {}
+        "settings": {
+          "useBatch": false
+        }
       }
     },
     "resources": {
@@ -99,6 +101,13 @@
           "target": [
             "TargetMain"
           ]
+        },
+        {
+          "name" :"RouteDetail",
+          "pattern" : "detail/{id}",
+          "target" : [
+            "TargetDetail"
+          ]
         }
       ],
       "targets": {
@@ -108,6 +117,13 @@
           "clearControlAggregation": false,
           "viewId": "Main",
           "viewName": "Main"
+        },
+        "TargetDetail" :{
+          "viewType": "XML",
+          "transition": "slide",
+          "clearControlAggregation": false,
+          "viewId": "Detail",
+          "viewName": "Detail"
         }
       }
     },
