--- a/mta.yaml
+++ b/mta.yaml
@@ -26,7 +26,7 @@ modules:
   - name: productcatalog-connectivity
   parameters:
     disk-quota: 256M
-    host: product-catalog
+    host: archlynk-product-catalog
     memory: 256M
 - name: ui
   type: html5
