--- a/product-catalog-approuter/xs-app.json
+++ b/product-catalog-approuter/xs-app.json
@@ -2,12 +2,18 @@
   "authenticationMethod": "route",
   "routes": [
     {
-      "source": "^/odata/(.*)$",
-      "target": "/sap/opu/odata/ALK/PRD_CATALOG_SRV_CDS/$1",
+      "source": "^/sap/(.*)$",
+      "target": "/sap/$1",
       "destination": "S4P",
-      "csrfProtection": false,
+      "authenticationType": "xsuaa",
+      "csrfProtection": false
+    },
+    {
+      "source": "^(.*)$",
+      "target": "$1",
+      "service": "html5-apps-repo-rt",
       "authenticationType": "xsuaa"
     }
   ],
-  "welcomeFile": "/uimodule"
+  "welcomeFile": "/ui/index.html"
 }
